--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body{
-  background: url(background.png) no-repeat center center fixed;
+  background: url(tulips-virtual-background.jpg)  no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
